fix: footer spacing

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -45,27 +45,35 @@
     font-weight: 700;
     line-height: 34px;
     letter-spacing: 0.07rem;
+    text-align: center;
 }
 
 .navLinks, .socialLinks {
     font-family: "SF-Pro-Display-Regular";
     display: flex;
     gap: 1rem;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 1rem;
     line-height: 16px;
     color: white;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 
     @media (max-width: 768px) {
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: 1rem;
+        font-size: 1.5rem;
+        gap: 2rem;
+        margin-top: 2rem;
+        margin-bottom: 4rem;
     }
 
     @media (max-width: 280px) {
-        gap: 0.3rem;
-        font-size: 0.4rem;
+        gap: 1.5rem;
+        font-size: 1.5rem;
+        gap: 4rem;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
     }
 }
 
