--- a/components/Navbar.module.scss
+++ b/components/Navbar.module.scss
@@ -14,6 +14,8 @@
     display: flex;
     gap: 1rem;
     font-weight: 500;
+    font-size: 1rem;
+    align-items: center;
 
     @media (max-width: 768px) {
         gap: 0.8rem;
@@ -25,3 +27,4 @@
         font-size: 1rem;
     }
 }
+
